gpu process + xrender = Crash in [@ gfxPlatform::Init | mozilla::layers::X11DataTextureSourceBasic::Update ]
Categories
(Core :: Graphics, defect, P3)
Tracking
()
People
(Reporter: jan, Assigned: aosmond)
References
(Regression)
Details
(Keywords: crash, nightly-community, regression, Whiteboard: [gfx-noted])
Crash Data
Attachments
(1 file)
| Comment hidden (obsolete) |
Comment 1•7 years ago
|
||
| Reporter | ||
Comment 2•7 years ago
•
|
||
Updated•7 years ago
|
Updated•7 years ago
|
| Reporter | ||
Comment 3•6 years ago
•
|
||
I had totally forgotten about this bug. Crashes already happened before bug 1549965 landed.
Still reproducible when manually enabling xrender: bp-e0e9b6a1-6041-4b21-b000-338500190601
Solution: Disable gfx.xrender.enabled. It is disabled by default.
| Assignee | ||
Comment 4•6 years ago
|
||
When I get a moment, I will write a patch to switch uses of gfxPlatform::GetPlatform()->CreateDrawTargetForSurface to gfxPlatform::CreateDrawTargetForSurface. We don't actually need to initialize gfxPlatform to use this method.
Updated•6 years ago
|
| Assignee | ||
Comment 5•6 years ago
|
||
gfxPlatform::GetSourceSurfaceForSurface and CreateDrawTargetForSurface
are both static methods that we sometimes use via the pattern
gfxPlatform::GetPlatform()->... This is problematic because this forces
gfxPlatform to be initialized in the process, and in the GPU process, we
don't support this. It should be safe to call these methods without
initializing gfxPlatform, so this patch removes the GetPlatform() call.
GetSourceSurfaceForSurface may end up initializing gfxPlatform anyways,
depending on whether or not a DrawTarget was given. This should not be a
concern for the crashes observed in bug 1435586.
| Assignee | ||
Comment 6•6 years ago
|
||
Comment 7•6 years ago
|
||
This moved up to the #5 top crash on 69 nightly. Crashes started increasing in the 5-31 build.
Comment 9•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Updated•4 years ago
|